--- a/templates/admin/dashboard.html
+++ b/templates/admin/dashboard.html
@@ -42,8 +42,29 @@
             color: #6c757d;
         }
     </style>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="{{ url_for('index') }}">Medical Diagnosis</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+                {% if current_user.is_authenticated %}
+                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('signup') }}">Sign Up</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
     <div class="container-fluid">
         <div class="row">
             <!-- Sidebar -->
@@ -63,6 +84,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-white" href="/admin/export?from={{ date_from }}&to={{ date_to }}">
                                 Export Data
+                            </a>
+                        </li>  
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="{{ url_for('view_logs') }}">
+                                View Access Logs
                             </a>
                         </li>                       
                     </ul>
