--- a/templates/diagnosis.html
+++ b/templates/diagnosis.html
@@ -3,8 +3,29 @@
 <head>
     <title>Diagnosis Results</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="{{ url_for('index') }}">Medical Diagnosis</a>
+        <div class="collapse navbar-collapse">
+            <ul class="navbar-nav ml-auto">
+                {% if current_user.is_authenticated %}
+                    
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('login') }}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('signup') }}">Sign Up</a>
+                    </li>
+                {% endif %}
+            </ul>
+        </div>
+    </nav>
     <div class="container">
         <h1>Diagnosis Results</h1>
         
@@ -47,7 +68,7 @@
                 </form>
             </div>
             
-            <a href="/" class="back-btn">Check Another Set of Symptoms</a>
+            <a href="{{ url_for('index') }}" class="back-btn">Check Another Set of Symptoms</a>
         </div>
         
         <div class="disclaimer">
